-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
The following YAML causes a crash
net:
- net type: tcp
local NI(s):
- interfaces:
0: eth0
tunables:
peer_credits: 32
- interfaces:
0: eth1
tunables:
peer_credits: 32
- interfaces:
0: eth2
tunables:
peer_credits: 32
peer_credits and peer_tx_credits default to 0, which causes an NI to be removed prematurely.
Missing parameters should be defaulted.